src/snapshots/sel__parse__test-30.snap
---
source: src/parse.rs
expression: "t(b\"let let={:let:,,LET} 3 3\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Binding {
                        loc_let: Location(
                            "<test>",
                            0..3,
                        ),
                        pat: Pair {
                            fst: Word {
                                loc: Location(
                                    "<test>",
                                    4..7,
                                ),
                                word: "keyword 'let'",
                            },
                            loc_equal: Location(
                                "<test>",
                                7..8,
                            ),
                            snd: List {
                                loc_open: Location(
                                    "<test>",
                                    8..9,
                                ),
                                items: [
                                    Bytes {
                                        loc: Location(
                                            "<test>",
                                            9..14,
                                        ),
                                        bytes: [
                                            108,
                                            101,
                                            116,
                                        ],
                                    },
                                ],
                                rest: Some(
                                    PatListRest {
                                        loc_comma: Location(
                                            "<test>",
                                            15..16,
                                        ),
                                        loc_name: Location(
                                            "<test>",
                                            16..19,
                                        ),
                                        name: "token 'LET'",
                                    },
                                ),
                                loc_close: Location(
                                    "<test>",
                                    19..20,
                                ),
                            },
                        },
                        res: Number {
                            loc: Location(
                                "<test>",
                                21..22,
                            ),
                            number: 3.0,
                        },
                        alt: Some(
                            Number {
                                loc: Location(
                                    "<test>",
                                    23..24,
                                ),
                                number: 3.0,
                            },
                        ),
                    },
                    args: [],
                },
                tail: [],
            },
        ),
    },
    [
        Error(
            Location(
                "<test>",
                4..7,
            ),
            Unexpected {
                token: Let,
                expected: "a pattern",
            },
        ),
        Error(
            Location(
                "<test>",
                8..9,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        16..19,
                    ),
                    Unexpected {
                        token: Unknown(
                            "LET",
                        ),
                        expected: "a word then closing '}' after ',,'",
                    },
                ),
                because: Unmatched {
                    open_token: OpenBrace,
                },
            },
        ),
    ],
)
